--- a/.github/workflows/build-index.yml
+++ b/.github/workflows/build-index.yml
@@ -3,7 +3,7 @@ name: Build Marketplace Index
 on:
   push:
     branches:
-      - main
+      - master
     paths:
       - 'plugins/**'
   workflow_dispatch:
